correcion de etiquetas a

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href=""><i class="bi bi-play-circle-fill text-black"></i></a>
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill text-black"></i></a>
               </div>
               <p class="text-center text-white">Tus me gusta</p>
             </div>
@@ -160,7 +160,7 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href=""><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
               <p class="text-center text-white">Nombre Album</p>
             </div>
@@ -173,7 +173,7 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href=""><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
               <p class="text-center text-white">Nombre Album</p>
             </div>
@@ -186,7 +186,7 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href=""><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
               <p class="text-center text-white">Nombre Album</p>
             </div>
@@ -199,7 +199,7 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href=""><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
               <p class="text-center text-white">Nombre Album</p>
             </div>
@@ -212,7 +212,7 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href=""><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
               <p class="text-center text-white">Nombre Album</p>
             </div>
@@ -225,7 +225,7 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href=""><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
               <p class="text-center text-white">Nombre Album</p>
             </div>
@@ -238,7 +238,7 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href=""><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
               <p class="text-center text-white">Nombre Album</p>
             </div>
@@ -398,158 +398,6 @@
             </div>
           </div>
         </div>
-
-        <div class="card">
-            <div
-              class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-            >
-              <div class="text-center btn-play">
-                <i class="bi bi-play-circle reproducir"></i>
-              </div>
-  
-              <div>
-                <p class="card-title mb-0">Nombre de la Canción</p>
-                <p class="card-text">Nombre del Artista</p>
-              </div>
-  
-              <div class="nombreAlbum">
-                <p class="card-text">Nombre del Álbum</p>
-              </div>
-              <div class="btn-selecion">
-                <i
-                  id="corazon1"
-                  class="bi bi-heart"
-                  onclick="cambiarIconoFavoritos('corazon1')"
-                ></i>
-                <i
-                  id="agregar1"
-                  class="bi bi-plus-circle"
-                  onclick="cambiarIconoAgregar('agregar1')"
-                ></i>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div
-              class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-            >
-              <div class="text-center btn-play">
-                <i class="bi bi-play-circle reproducir"></i>
-              </div>
-  
-              <div>
-                <p class="card-title mb-0">Nombre de la Canción</p>
-                <p class="card-text">Nombre del Artista</p>
-              </div>
-  
-              <div class="nombreAlbum">
-                <p class="card-text">Nombre del Álbum</p>
-              </div>
-              <div class="btn-selecion">
-                <i
-                  id="corazon2"
-                  class="bi bi-heart"
-                  onclick="cambiarIconoFavoritos('corazon2')"
-                ></i>
-                <i
-                  id="agregar2"
-                  class="bi bi-plus-circle"
-                  onclick="cambiarIconoAgregar('agregar2')"
-                ></i>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div
-              class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-            >
-              <div class="text-center btn-play">
-                <i class="bi bi-play-circle reproducir"></i>
-              </div>
-  
-              <div>
-                <p class="card-title mb-0">Nombre de la Canción</p>
-                <p class="card-text">Nombre del Artista</p>
-              </div>
-  
-              <div class="nombreAlbum">
-                <p class="card-text">Nombre del Álbum</p>
-              </div>
-              <div class="btn-selecion">
-                <i
-                  id="corazon3"
-                  class="bi bi-heart"
-                  onclick="cambiarIconoFavoritos('corazon3')"
-                ></i>
-                <i
-                  id="agregar3"
-                  class="bi bi-plus-circle"
-                  onclick="cambiarIconoAgregar('agregar3')"
-                ></i>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div
-              class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-            >
-              <div class="text-center btn-play">
-                <i class="bi bi-play-circle reproducir"></i>
-              </div>
-  
-              <div>
-                <p class="card-title mb-0">Nombre de la Canción</p>
-                <p class="card-text">Nombre del Artista</p>
-              </div>
-  
-              <div class="nombreAlbum">
-                <p class="card-text">Nombre del Álbum</p>
-              </div>
-              <div class="btn-selecion">
-                <i
-                  id="corazon4"
-                  class="bi bi-heart"
-                  onclick="cambiarIconoFavoritos('corazon4')"
-                ></i>
-                <i
-                  id="agregar4"
-                  class="bi bi-plus-circle"
-                  onclick="cambiarIconoAgregar('agregar4')"
-                ></i>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div
-              class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-            >
-              <div class="text-center btn-play">
-                <i class="bi bi-play-circle reproducir"></i>
-              </div>
-  
-              <div>
-                <p class="card-title mb-0">Nombre de la Canción</p>
-                <p class="card-text">Nombre del Artista</p>
-              </div>
-  
-              <div class="nombreAlbum">
-                <p class="card-text">Nombre del Álbum</p>
-              </div>
-              <div class="btn-selecion">
-                <i
-                  id="corazon5"
-                  class="bi bi-heart"
-                  onclick="cambiarIconoFavoritos('corazon5')"
-                ></i>
-                <i
-                  id="agregar5"
-                  class="bi bi-plus-circle"
-                  onclick="cambiarIconoAgregar('agregar5')"
-                ></i>
-              </div>
-            </div>
-          </div>
-
 
       </section>
 
