--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="fixed-top mb-5">
       <nav
         class="efectoBlur navbar navbar-expand-md bg-body-tertiary navbar bg-dark border-bottom border-body py-3"
         data-bs-theme="dark"
       >
         <div class="container">
-          <a class="navbar-brand m-lg-0 px-md-4" href="#">
-            <!-- <img src="./IMG/g3SoundGIF.gif" alt="g3SoundGIF" id="imglogo"> -->
-            logo
+          <a class="navbar-brand m-lg-0" href="#">
+            <img src="./IMG/logosoundg3.png" alt="g3SoundGIF" id="imglogo">
           </a>
           <button
             class="navbar-toggler"
@@ -46,36 +45,35 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div id="elementosNavbar">
               <ul class="navbar-nav me-auto mx-lg-5" id="listaNavbar">
-                <div class="d-flex" id="elementosNav">
-                  <li class="nav-item p-lg-3 px-xl-4 p-md-3 py-sm-3">
+                <div class="d-flex mb-md-3" id="elementosNav">
+                  <li class="nav-item p-lg-2 px-xl-2  mx-md-3 py-sm-3">
                     <a class="nav-link active" aria-current="page" href="#">
-                      <i class="fa-solid fa-house" style="color: #ffffff"></i>
+                      <i class="fa-solid fa-house"></i>
                       Inicio
                     </a>
                   </li>
-                  <li class="nav-item p-lg-3 px-xl-4 p-md-3 py-sm-3">
+                  <li class="nav-item p-lg-2 px-xl-2  mx-md-3 py-sm-3">
                     <a class="nav-link" href="#">
-                      <i class="fa-solid fa-globe" style="color: #ffffff"></i>
+                      <i class="fa-solid fa-globe"></i>
                       Libreria</a
                     >
                   </li>
-                  <li class="nav-item p-lg-3 px-xl-4 p-md-3 py-sm-3">
+                  <li class="nav-item p-lg-2 px-xl-2  mx-md-3 py-sm-3">
                     <a class="nav-link" href="#">
                       <i
                         class="fa-solid fa-bookmark"
-                        style="color: #ffffff"
                       ></i>
                       Lista de reproduccion
                     </a>
                   </li>
                 </div>
                 <form
-                  class="d-flex justify-content-center align-items-center p-lg-2 px-xl-4"
+                  class="d-flex justify-content-center align-items-center p-lg-0 px-xl-2"
                   role="search"
                 >
                   <input
                     id="inputBuscar"
-                    class="form-control me-3 p-lg-2 mx-xl-4 mb-sm-3"
+                    class="form-control me-2 p-lg-2 mx-xl-2 "
                     type="search"
                     placeholder="Buscar"
                     aria-label="Buscar"
@@ -90,10 +88,10 @@
               </ul>
             </div>
             <div class="d-flex flex-column">
-              <button class="btn btn-success my-3 fs-5" type="submit">
+              <button class="btn btn-success my-3 fs-5 botonesUsuario" type="submit">
                 Iniciar sesión
               </button>
-              <button class="btn btn-success fs-5" type="submit">Registrate</button>
+              <button class="btn btn-success fs-5 botonesUsuario" type="submit">Registrate</button>
             </div>
           </div>
         </div>
