se agregaron las imagenes

--- a/index.html
+++ b/index.html
@@ -28,42 +28,42 @@
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
                   <img
-                    src="./img/cover.jpg"
+                    src="./img/artista1.webp"
                     class="d-block"
                     alt="imagen de artista"
                   />
-                  <p class="text-center text-white">Nombre artista</p>
+                  <p class="text-center text-white">Shakira</p>
                 </div>
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
                   <img
-                    src="./img/cover.jpg"
+                    src="./img/artista3.jpg"
                     class="d-block"
                     alt="imagen de artista"
                   />
-                  <p class="text-center text-white">Nombre artista</p>
+                  <p class="text-center text-white">AC/DC</p>
                 </div>
                 <div
                   class="d-flex justify-content-center flex-column d-none d-sm-block selecion-artista"
                 >
                   <img
-                    src="./img/cover.jpg"
+                    src="./img/artista2.webp"
                     class="d-block"
                     alt="imagen de artista"
                   />
-                  <p class="text-center text-white">Nombre artista</p>
+                  <p class="text-center text-white">Tiago PZK</p>
                 </div>
 
                 <div
                   class="d-flex justify-content-center flex-column d-none d-sm-block selecion-artista"
                 >
                   <img
-                    src="./img/cover.jpg"
+                    src="./img/artista4.webp"
                     class="d-block"
                     alt="imagen de artista"
                   />
-                  <p class="text-center text-white">Nombre artista</p>
+                  <p class="text-center text-white">Daddy Yankee</p>
                 </div>
               </div>
             </div>
@@ -73,42 +73,42 @@
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
                   <img
-                    src="./img/cover2.jpg"
+                    src="./img/artista5.webp"
                     class="d-block"
                     alt="imagen de artista"
                   />
-                  <p class="text-center text-white">Nombre artista</p>
+                  <p class="text-center text-white">Bizarrap</p>
                 </div>
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
                   <img
-                    src="./img/cover2.jpg"
+                    src="./img/artista6.jpg"
                     class="d-block"
                     alt="imagen de artista"
                   />
-                  <p class="text-center text-white">Nombre artista</p>
+                  <p class="text-center text-white">Los Redondos</p>
                 </div>
                 <div
                   class="d-flex justify-content-center flex-column d-none d-sm-block selecion-artista"
                 >
                   <img
-                    src="./img/cover2.jpg"
+                    src="./img/artista7.webp"
                     class="d-block"
                     alt="imagen de artista"
                   />
-                  <p class="text-center text-white">Nombre artista</p>
+                  <p class="text-center text-white">Bad Bunny</p>
                 </div>
 
                 <div
                   class="d-flex justify-content-center flex-column d-none d-sm-block selecion-artista"
                 >
                   <img
-                    src="./img/cover2.jpg"
+                    src="./img/artista8.jpg"
                     class="d-block"
                     alt="imagen de artista"
                   />
-                  <p class="text-center text-white">Nombre artista</p>
+                  <p class="text-center text-white">Ke Personajes</p>
                 </div>
               </div>
             </div>
@@ -162,85 +162,85 @@
               <div class="icono-superpuesto">
                 <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
-              <p class="text-center text-white">Nombre Album</p>
+              <p class="text-center text-white">Bocanada</p>
             </div>
             <div
               class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
             >
               <img
-                src="./img/cover.jpg"
+                src="./img/album1.webp"
                 class="img-fluid album mb-1"
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
-              <p class="text-center text-white">Nombre Album</p>
+              <p class="text-center text-white">El Dorado</p>
             </div>
             <div
               class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
             >
               <img
-                src="./img/cover.jpg"
+                src="./img/album2.jpg"
                 class="img-fluid album mb-1"
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
-              <p class="text-center text-white">Nombre Album</p>
+              <p class="text-center text-white">Oktubre</p>
             </div>
             <div
               class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
             >
               <img
-                src="./img/cover.jpg"
+                src="./img/album4.jpg"
                 class="img-fluid album mb-1"
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
-              <p class="text-center text-white">Nombre Album</p>
+              <p class="text-center text-white">The Dark side</p>
             </div>
             <div
               class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
             >
               <img
-                src="./img/cover.jpg"
+                src="./img/album6.jpg"
                 class="img-fluid album mb-1"
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
-              <p class="text-center text-white">Nombre Album</p>
+              <p class="text-center text-white">Abbey Road</p>
             </div>
             <div
               class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
             >
               <img
-                src="./img/cover.jpg"
+                src="./img/cover2.jpg"
                 class="img-fluid album mb-1"
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
-              <p class="text-center text-white">Nombre Album</p>
+              <p class="text-center text-white">Fuerza Natural</p>
             </div>
             <div
               class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
             >
               <img
-                src="./img/cover.jpg"
+                src="./img/album7.jpg"
                 class="img-fluid album mb-1"
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
-              <p class="text-center text-white">Nombre Album</p>
+              <p class="text-center text-white">Aladdine Sane</p>
             </div>
           </div>
         </div>
