--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -53,170 +53,152 @@
         <article class="container">
           <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4">
-              <div
-                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
-              >
+              <div class="card colorCeleste border-2 border-white">
                 <img
-                  src="../img/AVATAR CORNET.png"
+                  src="../img/teamG3/Leonel Cordero.jpeg"
                   class="card-img-top rounded-circle p-3"
-                  alt="Foto de Diego Cornet"
+                  alt="Foto de Leonel Cordero"
                 />
                 <div class="card-body text-center">
-                  <h5 class="card-title fw-bold">Diego Cornet</h5>
+                  <h5 class="card-title fw-bold">Leonel Cordero</h5>
                   <p class="card-text">
-                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
-                    tecnología y por tal motivo me convertí en programador. por
-                    eso hoy te traigo mi primer App de música.
+                    Programador web fullstack, encargado del maquetado de la
+                    barra de navegacion y logica desarrollada con javascript.
                   </p>
-                  <a
-                    href="https://www.twitch.tv/cornet_z"
-                    class="btn btn-primary colorMorado border-white"
-                    ><i class="bi bi-twitch"></i> Mi red social</a
+                  <div
+                    class="accordion accordion"
+                    id="accordionFlushLeonelCordero"
                   >
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseOne"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseOne"
+                        >
+                          Mis redes sociales
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseOne"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushLeonelCordero"
+                      >
+                        <div class="accordion-body">
+                          <div>
+                            <a
+                              href="https://github.com/LeonelRC23"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi GitHub
+                              <i class="bi bi-github"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://www.linkedin.com/in/leonelrc22/"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi LinkedIn
+                              <i class="bi bi-linkedin"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://instagram.com/leo_gn17?igshid=MzMyNGUyNmU2YQ=="
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi Instagram
+                              <i class="bi bi-instagram"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
-              <div
-                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
-              >
+              <div class="card colorCeleste border-2 border-white">
                 <img
-                  src="../img/AVATAR CORNET.png"
+                  src="../img/teamG3/Diego Cornet.png"
                   class="card-img-top rounded-circle p-3"
                   alt="Foto de Diego Cornet"
                 />
                 <div class="card-body text-center">
                   <h5 class="card-title fw-bold">Diego Cornet</h5>
                   <p class="card-text">
-                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
-                    tecnología y por tal motivo me convertí en programador. por
-                    eso hoy te traigo mi primer App de música.
+                    Soy Diego me gusta mucho la tecnología y por tal motivo me
+                    convertí en programador. por eso hoy te traigo mi primer App
+                    de música.
                   </p>
-                  <a
-                    href="https://www.twitch.tv/cornet_z"
-                    class="btn btn-primary colorMorado border-white"
-                    ><i class="bi bi-twitch"></i> Mi red social</a
+                  <div
+                    class="accordion accordion"
+                    id="accordionFlushDiegoCornet"
                   >
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <div
-                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
-              >
-                <img
-                  src="../img/AVATAR CORNET.png"
-                  class="card-img-top rounded-circle p-3"
-                  alt="Foto de Diego Cornet"
-                />
-                <div class="card-body text-center">
-                  <h5 class="card-title fw-bold">Diego Cornet</h5>
-                  <p class="card-text">
-                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
-                    tecnología y por tal motivo me convertí en programador. por
-                    eso hoy te traigo mi primer App de música.
-                  </p>
-                  <a
-                    href="https://www.twitch.tv/cornet_z"
-                    class="btn btn-primary colorMorado border-white"
-                    ><i class="bi bi-twitch"></i> Mi red social</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <div
-                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
-              >
-                <img
-                  src="../img/AVATAR CORNET.png"
-                  class="card-img-top rounded-circle p-3"
-                  alt="Foto de Diego Cornet"
-                />
-                <div class="card-body text-center">
-                  <h5 class="card-title fw-bold">Diego Cornet</h5>
-                  <p class="card-text">
-                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
-                    tecnología y por tal motivo me convertí en programador. por
-                    eso hoy te traigo mi primer App de música.
-                  </p>
-                  <a
-                    href="https://www.twitch.tv/cornet_z"
-                    class="btn btn-primary colorMorado border-white"
-                    ><i class="bi bi-twitch"></i> Mi red social</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <div
-                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
-              >
-                <img
-                  src="../img/AVATAR CORNET.png"
-                  class="card-img-top rounded-circle p-3"
-                  alt="Foto de Diego Cornet"
-                />
-                <div class="card-body text-center">
-                  <h5 class="card-title fw-bold">Diego Cornet</h5>
-                  <p class="card-text">
-                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
-                    tecnología y por tal motivo me convertí en programador. por
-                    eso hoy te traigo mi primer App de música.
-                  </p>
-                  <a
-                    href="https://www.twitch.tv/cornet_z"
-                    class="btn btn-primary colorMorado border-white"
-                    ><i class="bi bi-twitch"></i> Mi red social</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <div
-                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
-              >
-                <img
-                  src="../img/AVATAR CORNET.png"
-                  class="card-img-top rounded-circle p-3"
-                  alt="Foto de Diego Cornet"
-                />
-                <div class="card-body text-center">
-                  <h5 class="card-title fw-bold">Diego Cornet</h5>
-                  <p class="card-text">
-                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
-                    tecnología y por tal motivo me convertí en programador. por
-                    eso hoy te traigo mi primer App de música.
-                  </p>
-                  <a
-                    href="https://www.twitch.tv/cornet_z"
-                    class="btn btn-primary colorMorado border-white"
-                    ><i class="bi bi-twitch"></i> Mi red social</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <div
-                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
-              >
-                <img
-                  src="../img/AVATAR CORNET.png"
-                  class="card-img-top rounded-circle p-3"
-                  alt="Foto de Diego Cornet"
-                />
-                <div class="card-body text-center">
-                  <h5 class="card-title fw-bold">Diego Cornet</h5>
-                  <p class="card-text">
-                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
-                    tecnología y por tal motivo me convertí en programador. por
-                    eso hoy te traigo mi primer App de música.
-                  </p>
-                  <a
-                    href="https://www.twitch.tv/cornet_z"
-                    class="btn btn-primary colorMorado border-white"
-                    ><i class="bi bi-twitch"></i> Mi red social</a
-                  >
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseTwo"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseTwo"
+                        >
+                          Mis redes sociales
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseTwo"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushDiegoCornet"
+                      >
+                        <div class="accordion-body">
+                          <div>
+                            <a
+                              href="https://github.com/Cornetyt"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi GitHub
+                              <i class="bi bi-github"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://www.linkedin.com/in/diego-cornet/"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi LinkedIn
+                              <i class="bi bi-linkedin"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://www.instagram.com/cornet_yt/"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi Instagram
+                              <i class="bi bi-instagram"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://www.twitch.tv/cornet_z"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi Twitch
+                              <i class="bi bi-twitch"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
