--- a/pages/registro.html
+++ b/pages/registro.html
@@ -84,6 +84,10 @@
                 Crear Cuenta
             </button>
           </div>
+          <div class="d-flex flex-row">
+            <p class="pe-3 pt-3">¿Ya tienes una cuenta?</p>
+            <a href="./login.html" class="text-decoration-none pt-3 ps-3">Inicia Sesión</a>
+          </div>
         </form>
       </section>
     </main>
