--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -202,6 +202,77 @@
                 </div>
               </div>
             </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="card colorCeleste border-2 border-white">
+                <img
+                  src="../img/teamG3/Pablo Gonzales.jpeg"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Gonzales Pablo"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Pablo Gonzalez</h5>
+                  <p class="card-text">
+                    Hola soy Pablo una persona altamente creativa con una pasión
+                    por la programación. Encargado del maquetado de la pagina
+                    principal del proyecto.
+                  </p>
+                  <div
+                    class="accordion accordion"
+                    id="accordionFlushDiegoCornet"
+                  >
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseThree"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseThree"
+                        >
+                          Mis redes sociales
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseThree"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushDiegoCornet"
+                      >
+                        <div class="accordion-body">
+                          <div>
+                            <a
+                              href="https://github.com/pablogonza37"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi GitHub
+                              <i class="bi bi-github"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="http://www.linkedin.com/in/pablo-gonzalez-384707264"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi LinkedIn
+                              <i class="bi bi-linkedin"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://instagram.com/pablo.gast.gonzalez.37?igshid=MzMyNGUyNmU2YQ=="
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi Instagram
+                              <i class="bi bi-instagram"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </article>
       </section>
