Agregue la card de nano

--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -52,7 +52,7 @@
         </article>
         <article class="container">
           <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="col-sm-12 col-md-6 col-lg-4 my-3 h-100">
               <div class="card colorCeleste border-2 border-white">
                 <img
                   src="../img/teamG3/Leonel Cordero.jpeg"
@@ -122,7 +122,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="col-sm-12 col-md-6 col-lg-4 my-3 h-100">
               <div class="card colorCeleste border-2 border-white">
                 <img
                   src="../img/teamG3/Diego Cornet.png"
@@ -132,9 +132,9 @@
                 <div class="card-body text-center">
                   <h5 class="card-title fw-bold">Diego Cornet</h5>
                   <p class="card-text">
-                    Soy Diego me gusta mucho la tecnología y por tal motivo me
-                    convertí en programador. por eso hoy te traigo mi primer App
-                    de música.
+                    Tengo 22 años, me gusta mucho la tecnología y la
+                    programación. Maquete esta página y la de lista de
+                    reproducción.
                   </p>
                   <div
                     class="accordion accordion"
@@ -202,7 +202,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="col-sm-12 col-md-6 col-lg-4 my-3 h-100">
               <div class="card colorCeleste border-2 border-white">
                 <img
                   src="../img/teamG3/Pablo Gonzales.jpeg"
@@ -260,6 +260,73 @@
                           <div>
                             <a
                               href="https://instagram.com/pablo.gast.gonzalez.37?igshid=MzMyNGUyNmU2YQ=="
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi Instagram
+                              <i class="bi bi-instagram"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 my-3 h-100">
+              <div class="card colorCeleste border-2 border-white">
+                <img
+                  src="../img/teamG3/Nano.jpeg"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Nano"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Nano</h5>
+                  <p class="card-text">
+                    Buenas mi nombre es Humberto Moreno, más conocido cómo Nano
+                    main WoW, Estuve encargado de la página de los artistas.
+                  </p>
+                  <div class="accordion accordion" id="accordionFlushNano">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseFour"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseFour"
+                        >
+                          Mis redes sociales
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseFour"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushNano"
+                      >
+                        <div class="accordion-body">
+                          <div>
+                            <a
+                              href="https://github.com/Rippy1024"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi GitHub
+                              <i class="bi bi-github"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://LinkedIn.com/in/humberto-moreno-b05a1624a/"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi LinkedIn
+                              <i class="bi bi-linkedin"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://www.instagram.com/nano1024/"
                               target="_blank"
                               class="btn btn-primary colorMorado border-black mb-1"
                               >Mi Instagram
