se cambiaron las imagenes

--- a/index.html
+++ b/index.html
@@ -28,14 +28,24 @@
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
                   <img
-                    src="./img/artista1.webp"
+                    src="./img/dimash-front.jpg"
                     class="d-block"
                     alt="imagen de artista"
                   />
-                  <p class="text-center text-white">Shakira</p>
+                  <p class="text-center text-white">Dimash</p>
                 </div>
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
+                >
+                  <img
+                    src="./img/fito-paez.jpg"
+                    class="d-block"
+                    alt="imagen de artista"
+                  />
+                  <p class="text-center text-white">Fito Paez</p>
+                </div>
+                <div
+                  class="d-flex justify-content-center flex-column d-none d-sm-block selecion-artista"
                 >
                   <img
                     src="./img/artista3.jpg"
@@ -43,16 +53,6 @@
                     alt="imagen de artista"
                   />
                   <p class="text-center text-white">AC/DC</p>
-                </div>
-                <div
-                  class="d-flex justify-content-center flex-column d-none d-sm-block selecion-artista"
-                >
-                  <img
-                    src="./img/artista2.webp"
-                    class="d-block"
-                    alt="imagen de artista"
-                  />
-                  <p class="text-center text-white">Tiago PZK</p>
                 </div>
 
                 <div
@@ -73,11 +73,11 @@
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
                   <img
-                    src="./img/artista5.webp"
+                    src="./img/maria-becerra.jpg"
                     class="d-block"
                     alt="imagen de artista"
                   />
-                  <p class="text-center text-white">Bizarrap</p>
+                  <p class="text-center text-white">Maria Becerra</p>
                 </div>
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
@@ -155,27 +155,14 @@
               class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
             >
               <img
-                src="./img/cover.jpg"
+                src="./img/fito-paez_yo-te-amor.jpg"
                 class="img-fluid album mb-1"
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
-              <p class="text-center text-white">Bocanada</p>
-            </div>
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/album1.webp"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
-              </div>
-              <p class="text-center text-white">El Dorado</p>
+              <p class="text-center text-white">Yo Te Amo</p>
             </div>
             <div
               class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
@@ -194,14 +181,53 @@
               class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
             >
               <img
-                src="./img/album4.jpg"
+                src="./img/metallica3.jpg"
                 class="img-fluid album mb-1"
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
-              <p class="text-center text-white">The Dark side</p>
+              <p class="text-center text-white">Load</p>
+            </div>
+            <div
+              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
+            >
+              <img
+                src="./img/nahuel-pennisi-album.jpg"
+                class="img-fluid album mb-1"
+                alt="imagen de album"
+              />
+              <div class="icono-superpuesto">
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
+              </div>
+              <p class="text-center text-white">Primavera</p>
+            </div>
+            <div
+              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
+            >
+              <img
+                src="./img/maria-becerra.avif"
+                class="img-fluid album mb-1"
+                alt="imagen de album"
+              />
+              <div class="icono-superpuesto">
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
+              </div>
+              <p class="text-center text-white">Animal</p>
+            </div>
+            <div
+              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
+            >
+              <img
+                src="./img/discocard1.jpg"
+                class="img-fluid album mb-1"
+                alt="imagen de album"
+              />
+              <div class="icono-superpuesto">
+                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
+              </div>
+              <p class="text-center text-white">Taylor Swift</p>
             </div>
             <div
               class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
@@ -215,32 +241,6 @@
                 <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
               </div>
               <p class="text-center text-white">Abbey Road</p>
-            </div>
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/cover2.jpg"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
-              </div>
-              <p class="text-center text-white">Fuerza Natural</p>
-            </div>
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/album7.jpg"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
-              </div>
-              <p class="text-center text-white">Aladdine Sane</p>
             </div>
           </div>
         </div>
