--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -340,6 +340,74 @@
                 </div>
               </div>
             </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 my-3 h-100">
+              <div class="card colorCeleste border-2 border-white">
+                <img
+                  src="../img/teamG3/Jose Bovi.jpeg"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Jose Bovi"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Jose Bovi</h5>
+                  <p class="card-text">
+                    Soy José Bovi, futuro ingeniero en sistemas y programador
+                    web. Me gusta trabajar en equipo y pensar soluciones de
+                    manera lógica.
+                  </p>
+                  <div class="accordion accordion" id="accordionFlushJoseBovi">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseFive"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseFive"
+                        >
+                          Mis redes sociales
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseFive"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushJoseBovi"
+                      >
+                        <div class="accordion-body">
+                          <div>
+                            <a
+                              href="https://github.com/josxbovi"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi GitHub
+                              <i class="bi bi-github"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://www.linkedin.com/in/josebovi/"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi LinkedIn
+                              <i class="bi bi-linkedin"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://www.instagram.com/josxbovi/"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi Instagram
+                              <i class="bi bi-instagram"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </article>
       </section>
