--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -408,6 +408,77 @@
                 </div>
               </div>
             </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 my-3 h-100">
+              <div class="card colorCeleste border-2 border-white">
+                <img
+                  src="../img/teamG3/Cinthia Juarez.jpeg"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Cinthia Juarez"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Cinthia Juarez</h5>
+                  <p class="card-text">
+                    Hola, mí nombre es Cinthia futura programadora web. Me gusta
+                    trabajar en equipo y me encargo de la página de error404 en
+                    este proyecto.
+                  </p>
+                  <div
+                    class="accordion accordion"
+                    id="accordionFlushCinthiaJuarez"
+                  >
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseSix"
+                          aria-expanded="false"
+                          aria-controls="flush-collapseSix"
+                        >
+                          Mis redes sociales
+                        </button>
+                      </h2>
+                      <div
+                        id="flush-collapseSix"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushCinthiaJuarez"
+                      >
+                        <div class="accordion-body">
+                          <div>
+                            <a
+                              href="https://github.com/cinn778"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi GitHub
+                              <i class="bi bi-github"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://www.linkedin.com/in/cinthia-ju%C3%A1rez-29315a219/"
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi LinkedIn
+                              <i class="bi bi-linkedin"></i>
+                            </a>
+                          </div>
+                          <div>
+                            <a
+                              href="https://instagram.com/gabiijuarez01?igshid=OGQ5ZDc2ODk2ZA=="
+                              target="_blank"
+                              class="btn btn-primary colorMorado border-black mb-1"
+                              >Mi Instagram
+                              <i class="bi bi-instagram"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </article>
       </section>
